styles which should fix the offerings page on mobile

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -95,6 +95,16 @@ hr {
   border-bottom: 1px solid #fff;
 }
 
+@media (max-width: 667px) {
+  hr {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    border: 0;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #fff;
+}
+}
+
 .addPadding {
   padding:5%;
 }
