--- a/client/src/pages/Offerings/style.css
+++ b/client/src/pages/Offerings/style.css
@@ -85,7 +85,7 @@ color: #ADADAD
     .off-box-parent {
         position: absolute;
         top: 30%;
-        width: 65%;
+        width: 64%;
         left: 18%;
     }
 
